# Crystalization_lab

./: .gitignore  CL_centre_est.cpp  CMakeLists.txt  Cam_calib_verify.cpp  Camera_calibration.cpp  Capsule_PP.cpp  Charuco_board_maker.cpp  Coverage_data_collection_noise_model.cpp  README.md  README_codes_exp.md  Visual_drag_centre_aruco.cpp  aruco_view_optimization_gradient.cpp  aruco_view_optimization_news.cpp  aruco_view_optimization_news_adaptive.cpp  board_image_centre.cpp  board_pose_estimator.cpp  camera_calib_backup  compile_commands.json  crystal_line.cpp  initial_tests  maker_generator_aruco.cpp  misc.cpp  test_urx.py  vision  vision_detector.cpp
ur_rtde/: ur_rtdeTargets.cmake
